added references to site pages

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+	<header id="masthead">
+		<div class="container">
+			<nav>
+				<a href="index.html">Welcome!</a>
+				<a href="stables-lessons.html">Lessons and Stables</a>
+				<a href="tack-apparel.html">Tack and Apparel</a>
+				<a href="vets-farriers.html">Veterinarians and Farriers</a>
+				<a href="feed-supplies-trailers">Supplies, Feed, and Trailers</a>
+			</nav>
+		</div>
+	</header>
 
 </body>
 </html>
