--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en-US">
 <head>
 	<title>Equus-services</title>
@@ -9,6 +8,7 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+	<!--navigation bar with links to all pages -->
 	<header id="masthead">
 		<div class="container">
 			<nav>
@@ -20,6 +20,8 @@
 			</nav>
 		</div>
 	</header>
+
+
 
 </body>
 </html>
