--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
 		</div>
 	</header>
 
+	<main class="container">
+		<section class="title">
+			<h2>Welcome to</h2>
+			<h1>Much ADO About Horses!</h1>
+			<h3>(Alamance, Durham, Orange counties)</h3>
+			<h2>Equine Services Directory</h2>	
+
+		</section>
+	</main>
+
 
 
 </body>
