added text in body

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 			<h2>Equine Services Directory</h2>	
 
 		</section>
+		<div class="main">
+			<p>When I became involved in the horse world 14 years ago, I wished I could have had a “one stop shopping” directory to find the information I needed. So I have “entered at A” to begin to meet your information needs.</p>
+
+			<p>Inside you will find lists of service providers, shops, and suppliers and short descriptions of their services and products.  Most of these listed have a web presence through their own sites, Facebook pages or inclusion on sites like “Yelp” and “New Horse.”
+			Thanks for stopping by!</p>
+
+		</div>
 	</main>
 
 
