--- a/stables-lessons.html
+++ b/stables-lessons.html
@@ -21,6 +21,12 @@
 		</div>
 	</header>
 
+	<main class="container">
+		<h2>Riding Stables and Lesson Programs</h2>
+		<p>This provides descriptions of and links to area riding stables and lesson programs.  Many of the riding stables offer boarding for your horse(s), and most of these also have their own riding instructors who offer lessons. Some stables allow bringing your own trainer for lessons. 
+		</p>
+	</main>	
+
 
 
 </body>
