--- a/vets-farriers.html
+++ b/vets-farriers.html
@@ -21,7 +21,17 @@
 		</div>
 	</header>
 
-	
+	<main class="container">
+		<h2>Veterinary Practices and Farriers</h2>
+		<p>
+				These are very important equine health providers, and sometimes they work together to solve health issues.
+			<br>
+			 	 Veterinarians usually come to your farm to examine their patients for any number of conditions.  Their services include vaccinations for diseases, treatment for hoof and leg conditions, ‘floating’ teeth, prescribing antibiotics and medications for maladies like abscesses and joint pain relief.  You will want their phone on your ‘speed-dial.’
+			  <br> 
+				Farriers take care of the horses’ feet. At about 4-7 week intervals they trim and balance hooves, remove and replace shoes, and check for conditions that can affect the hooves. You will want their number on speed-dial, too.
+
+		</p>
+	</main>
 
 
 
