--- a/feed-supplies-trailers.html
+++ b/feed-supplies-trailers.html
@@ -21,6 +21,11 @@
 		</div>
 	</header>
 
+	<main class="container">
+		<h2>Feed, Supplies and Trailers</h2>
+			<p>This page helps horse owners who wish to buy their own feed and hay, buckets, shavings, saddle racks, trailers, and more.  </p>
+	</main>
+
 
 
 </body>
