added code for table

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	<title>Equus-services</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-			<meta charset="utf-8">
-			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<!--navigation bar with links to all pages -->
@@ -23,17 +25,17 @@
 
 	<main class="container">
 		<section class="title">
-			<h2>Welcome to</h2>
 			<h1>Much ADO About Horses!</h1>
 			<h3>(Alamance, Durham, Orange counties)</h3>
-			<h2>Equine Services Directory</h2>	
+			<h2>
+			Resources for</h2>
+			<h2>Horse Owners | Lovers | Dreamers</h2>	
 
 		</section>
 		<div class="main">
 			<p>When I became involved in the horse world 14 years ago, I wished I could have had a “one stop shopping” directory to find the information I needed. So I have “entered at A” to begin to meet your information needs.</p>
 
-			<p>Inside you will find lists of service providers, shops, and suppliers and short descriptions of their services and products.  Most of these listed have a web presence through their own sites, Facebook pages or inclusion on sites like “Yelp” and “New Horse.”
-			it addThanks for stopping by!</p>
+			<p>Inside you will find lists of service providers, shops, and suppliers and short descriptions of their services and products.  Most of these listed have a web presence through their own sites, Facebook pages or inclusion on sites like “Yelp” and “New Horse.”  Thanks for stopping by!</p>
 
 		</div>
 	</main>
