--- a/stables-lessons.html
+++ b/stables-lessons.html
@@ -4,6 +4,8 @@
 	<title>Equus-services</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -24,8 +26,56 @@
 	<main class="container">
 		<h2>Riding Stables and Lesson Programs</h2>
 		<p>
-			This provides descriptions of and links to area riding stables and lesson programs.  Many of the riding stables offer boarding for your horse(s), and most of these also have their own riding instructors who offer lessons. Some stables allow bringing your own trainer for lessons. 
+			Here is information about and links to area riding stables and lesson programs. The stables are listed by county. Many of the riding stables offer boarding for your horse(s), and most of these also have their own riding instructors who offer lessons. Some stables allow bringing your own trainer for lessons. 
 		</p>
+
+		<div class="container">
+			<table class="table table-bordered">
+				<tr>
+					<th>Stable Name</th>
+					<th>Website</th>
+					<th>Street Address</th>
+					<th>County</th>
+					<th>Services Offered</th>
+				</tr>
+				<tr>
+					<td>Blue Moon Stables</td>
+					<td>http://www.bluemoonstables.biz</td>
+					<td>1120 Whippoorwill Lane, Chapel Hill</td>
+					<td>Orange</td>
+					<td>Saddleseat, Lessons, Summer Camps</td>
+				</tr>
+				<tr>
+					<td>Chapel Hill Equestrian</td>
+					<td>http://www.chapelhillequestrian.net/default.net</td>
+					<td>6614 Alexander Dr, Chapel Hill</td>
+					<td>Orange</td>
+					<td>Boarding, Lessons, Hunters, Dressage</td>
+				</tr>
+				<tr>
+					<td>Double Take Stables</td>
+					<td>http://doubletakestables.weebly.com</td>
+					<td>Chapel Hill</td>
+					<td>Orange</td>
+					<td>Boarding, Lessons, Hunters, Jumpers, Summer Camps</td>
+				</tr>
+				<tr>
+					<td>Flying W Ranch</td>
+					<td>https://www.facebook.com/Flying-W-Ranch-366577716687074/</td>
+					<td>5120 St Marys Rd, Hillsborough</td>
+					<td>Orange</td>
+					<td>Boarding, Western, Hunter under Saddle, Lessons, Summer Camp</td>
+				</tr>
+				<tr>
+					<td>Mane Event Stables</td>
+					<td>http://maneeventstables.com</td>
+					<td>2545 Hwy 54 W, Chapel Hill</td>
+					<td>Orange</td>
+					<td>Boarding, Lessons, Hunters, Eventing, Summer Camps</td>
+				</tr>
+			</table>
+		</div>
+
 	</main>	
 
 
