--- a/feed-supplies-trailers.html
+++ b/feed-supplies-trailers.html
@@ -25,7 +25,9 @@
 		<h2>Feed, Supplies and Trailers</h2>
 			<p>This page helps horse owners who wish to buy their own feed and hay, buckets, shavings, saddle racks, trailers, and more.  </p>
 	</main>
-
+	
+	<div class="footer">
+	</div>
 
 
 </body>
