--- a/index.html
+++ b/index.html
@@ -25,20 +25,27 @@
 
 	<main class="container">
 		<section class="title">
-			<h1>Much ADO About Horses!</h1>
-			<h3>(Alamance, Durham, Orange counties)</h3>
-			<h2>
-			Resources for</h2>
+			<div class="jumbotron">
+				<h1>Much ADO About Horses!</h1>
+				<h3>(Alamance, Durham, Orange counties)</h3>
+			</div>
+			<h2>Resources for</h2>
 			<h2>Horse Owners | Lovers | Dreamers</h2>	
 
 		</section>
 		<div class="main">
-			<p>When I became involved in the horse world 14 years ago, I wished I could have had a “one stop shopping” directory to find the information I needed. So I have “entered at A” to begin to meet your information needs.</p>
+			<p>When I became involved in the horse world 14 years ago, I wished I could have had a “one stop shopping” directory to find the information I needed. So I have “entered at A”* to begin to meet your information needs.</p>
 
-			<p>Inside you will find lists of service providers, shops, and suppliers and short descriptions of their services and products.  Most of these listed have a web presence through their own sites, Facebook pages or inclusion on sites like “Yelp” and “New Horse.”  Thanks for stopping by!</p>
+			<p>Inside you will find lists of service providers, shops, and suppliers and short descriptions of their services and products.  Most of these listed have a web presence through their own sites, Facebook pages or inclusion on sites like “Yelp” and “New Horse.”</p>
+			<p>Thanks for stopping by!</p>
+			<br>
+			<p>(Enter at 'A' to start your dressage test!)</p>
 
 		</div>
 	</main>
+
+	<div class="footer">
+	</div>
 
 
 
