--- a/stables-lessons.html
+++ b/stables-lessons.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -24,7 +25,9 @@
 	</header>
 
 	<main class="container">
-		<h2>Riding Stables and Lesson Programs</h2>
+		<div class="jumbotron">
+			<h2>Riding Stables and Lesson Programs</h2>
+		</div>
 		<p>
 			Here is information about and links to area riding stables and lesson programs. The stables are listed by county. Many of the riding stables offer boarding for your horse(s), and most of these also have their own riding instructors who offer lessons. Some stables allow bringing your own trainer for lessons. 
 		</p>
@@ -62,7 +65,7 @@
 				<tr>
 					<td>Flying W Ranch</td>
 					<td>https://www.facebook.com/Flying-W-Ranch-366577716687074/</td>
-					<td>5120 St Marys Rd, Hillsborough</td>
+					<td>5120 St Marys Rd, HillsboroughJ</td>
 					<td>Orange</td>
 					<td>Boarding, Western, Hunter under Saddle, Lessons, Summer Camp</td>
 				</tr>
@@ -78,6 +81,8 @@
 
 	</main>	
 
+	<div class="footer">
+	</div>
 
 
 </body>
