--- a/feed-supplies-trailers.html
+++ b/feed-supplies-trailers.html
@@ -4,6 +4,8 @@
 	<title>Equus-services</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -22,10 +24,12 @@
 	</header>
 
 	<main class="container">
-		<h2>Feed, Supplies and Trailers</h2>
+		<div class="jumbotron">
+			<h2>Feed, Barn Supplies and Trailers</h2>
+		</div>
 			<p>This page helps horse owners who wish to buy their own feed and hay, buckets, shavings, saddle racks, trailers, and more.  </p>
 	</main>
-	
+
 	<div class="footer">
 	</div>
 
