--- a/tack-apparel.html
+++ b/tack-apparel.html
@@ -4,6 +4,8 @@
 	<title>Equus-services</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -22,13 +24,17 @@
 	</header>
 
 	<main class="container">
+		<div class="jumbotron">
 		<h2>Tack and Apparel Shops</h2>
+		</div>
 		<br>
 			<p>
 				Tack is what your horse wears when they are working, and apparel is what you wear.  Tack and apparel are usually found together in “tack shops.” Tack shops can be specialized for the style of riding; for example, Western or English.  Some have merchandise for several riding styles.  What can you find in them? Boots, breeches, jeans, shirts, jackets, helmets, gloves, saddles, bridles, saddle pads, girths and cinches, halters, leads, and much, much more! 
 			</p>
 	</main>
 
+	<div class="footer">
+	</div>
 
 
 </body>
