--- a/vets-farriers.html
+++ b/vets-farriers.html
@@ -4,6 +4,8 @@
 	<title>Equus-services</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -22,15 +24,17 @@
 	</header>
 
 	<main class="container">
-		<h2>Veterinary Practices and Farriers</h2>
+		<div class="jumbotron">
+			<h2>Veterinary Practices and Farriers</h2>
+		</div>
 		<p>
-				These are very important equine health providers, and sometimes they work together to solve health issues, especially the feet. 
+				These are very important equine health providers, and sometimes they work together to solve health issues, especially the horse's feet. 
 			<br>
 			 	 Veterinarians usually come to your farm to examine their patients for any number of conditions.  Their services include vaccinations for diseases, treatment for hoof and leg conditions, ‘floating’ teeth, prescribing antibiotics and medications for maladies like abscesses and joint pain relief, and pregnancy tests.  You will want their phone on your ‘speed-dial.’
 			  <br> 
 				Farriers take care of the horses’ feet. At about 4-7 week intervals they trim and balance hooves, remove and replace shoes, and check for conditions that can affect the hooves. You will want their number on speed-dial, too.  The old saying is true, "No hoof, no horse."
-
 		</p>
+
 	</main>
 
 	<div class="footer">
