--- a/feed-supplies-trailers.html
+++ b/feed-supplies-trailers.html
@@ -28,6 +28,104 @@
 			<h2>Feed, Barn Supplies and Trailers</h2>
 		</div>
 			<p>This page helps horse owners who wish to buy their own feed and hay, buckets, shavings, saddle racks, trailers, and more.  </p>
+		<h3>Feed and Supply Stores</h3>
+			<br>
+		<div class="container">
+			<table class="table table-bordered">
+				<tr>
+					<th>Store Name</th>
+					<th>Website</th>
+					<th>Street Address</th>
+					<th>County</th>
+					<th>Products Offered</th>
+				</tr>
+				<tr>
+					<td>Gro-Smart</td>
+					<td>http://www.grosmartnc.com/</td>
+					<td>250 S. Churton St., Hillsborough</td>
+					<td>Orange</td>
+					<td>Feed, hay, horse supplies, tack</td>
+				</tr>
+				<tr>
+					<td>Piedmont Feed and Garden Supply</td>
+					<td>http://www.piedmontfeed.com/</td>
+					<td>4805 NC Highway 54 West, Chapel Hill</td>
+					<td>Orange</td>
+					<td>Feed, hay, shavings, halters, horse supplies</td>
+				</tr>
+				<tr>
+					<td>Pittsboro Feed</td>
+					<td>http://www.pittsborofeed.com/</td>
+					<td>1103 East St., Pittsboro</td>
+					<td>Chatham</td>
+					<td>Feed, hay, horse and barn supplies, tack</td>
+				</tr>
+				<tr>
+					<td>Southern States</td>
+					<td>https://www.southernstates.com/storelocations/75647/</td>
+					<td>300 N. Greensboro St., Carrboro</td>
+					<td>Orange</td>
+					<td>Horse and farm supplies, feed</td>
+				</tr>
+				<tr>
+					<td>Tractor Supply</td>
+					<td>http://www.tractorsupply.com/</td>
+					<td>1701 NC Highway 86 S, Hillsborough</td>
+					<td>Orange</td>
+					<td>Bagged feeds, halters, grooming supplies, farm equipment</td>
+				</tr>
+			</table>
+		</div>
+
+		<h3>Trailers and Equipment</h3>
+
+		<div class="container">
+			<table class="table table-bordered">
+				<tr>
+					<th>Store Name</th>
+					<th>Website (or phone)</th>
+					<th>Street Address</th>
+					<th>County</th>
+					<th>Products Offered</th>
+				</tr>
+				<tr>
+					<td>C '&' F Trailers and Tack</td>
+					<td>252-438-5883</td>
+					<td>4005 Raleigh Rd., Henderson</td>
+					<td>Vance</td>
+					<td>Trailers, equipment, supplies, tack</td>
+				</tr>
+				<tr>
+					<td>Double D Trailers</td>
+					<td>https://www.doubledtrailers.com/</td>
+					<td>Pink Hill, NC</td>
+					<td>Lenoir</td>
+					<td>Trailers, custom trailers, equipment</td>
+				</tr>
+				<tr>
+					<td>Golden Gait Trailers</td>
+					<td>https://goldengait.com/</td>
+					<td>5051 Davidson Highway, Concord</td>
+					<td>Cabarrus</td>
+					<td>Trailers, custom trailers, equipment</td>
+				</tr>
+				<tr>
+					<td>Southern Alamance Trailer Co.</td>
+					<td>336-376-6316</td>
+					<td>8372 Bethel Church Park Rd., Snow Camp</td>
+					<td>Alamance</td>
+					<td>Trailers, sales, service and equipment</td>
+				</tr>
+				<tr>
+					<td>Woodlief Trailer Sales</td>
+					<td>http://www.goretrailers.com</td>
+					<td>5117 Purnell Rd., Wake Forest</td>
+					<td>Wake</td>
+					<td>Livestock and horse trailers, equipment</td>
+				</tr>
+
+			</table>			
+		</div>
 	</main>
 
 	<div class="footer">
