--- a/tack-apparel.html
+++ b/tack-apparel.html
@@ -31,6 +31,53 @@
 			<p>
 				Tack is what your horse wears when they are working, and apparel is what you wear.  Tack and apparel are usually found together in “tack shops.” Tack shops can be specialized for the style of riding; for example, Western or English.  Some have merchandise for several riding styles.  What can you find in them? Boots, breeches, jeans, shirts, jackets, helmets, gloves, saddles, bridles, saddle pads, girths and cinches, halters, leads, and much, much more! 
 			</p>
+		<div class="container">
+			<table class="table table-bordered">
+				<tr>
+					<th>Shop Name</th>
+					<th>Website</th>
+					<th>Street Address</th>
+					<th>County</th>
+					<th>Products Offered</th>
+				</tr>
+				<tr>
+					<td>B-Bar Farm and Tack Shop</td>
+					<td>http://www.b-barfarms.com/</td>
+					<td>3918 Bivins Rd., Hillsborough</td>
+					<td>Orange</td>
+					<td>Western and English tack, apparel, footwear, barn and stable supplies</td>
+				</tr>
+				<tr>
+					<td>The Bull Chute</td>
+					<td>http://www.thebullchute.com</td>
+					<td>6602 Glenwood Ave, Raleigh</td>
+					<td>Wake</td>
+					<td>Western apparel and footwear</td>
+				</tr>
+				<tr>
+					<td>Dover Saddlery</td>
+					<td>http://www.doversaddlery.com</td>
+					<td>7920 Skyland Ridge Pkwy., Raleigh</td>
+					<td>Wake</td>
+					<td>English tack and apparel, footwear, barn and grooming supplies</td>
+				</tr>
+				<tr>
+					<td>M '&' M Tack Shop</td>
+					<td>http://www.mmtackshop.com/</td>
+					<td>2721A Dover Farm Rd, Raleigh</td>
+					<td>Wake</td>
+					<td>English apparel, footwear, tack, barn and grooming supplies, saddle fitting</td>
+				</tr>
+				<tr>
+					<td>Rocking B Saddle Shop</td>
+					<td>https://www.facebook.com/pages/Rocking-B-Saddie-Shop/152433544798285</td>
+					<td>1400 Ben Johnston Rd, Hillsborough</td>
+					<td>Orange</td>
+					<td>English and Western tack, small amount of grooming and barn supplies, saddle fitting</td>
+				</tr>
+			</table>
+			</div>
+			
 	</main>
 
 	<div class="footer">
