--- a/vets-farriers.html
+++ b/vets-farriers.html
@@ -34,7 +34,106 @@
 			  <br> 
 				Farriers take care of the horses’ feet. At about 4-7 week intervals they trim and balance hooves, remove and replace shoes, and check for conditions that can affect the hooves. You will want their number on speed-dial, too.  The old saying is true, "No hoof, no horse."
 		</p>
+		<h3>Equine Veterinary Practices </h3>
+		<div class="container">
+			<table class="table table-bordered">
+				<tr>
+					<th>Practice Name</th>
+					<th>Veterinarian(s)</th>
+					<th>Web Site</th>
+					<th>Street Address</th>
+					<th>County</th>
+					<th>Services Offered</th>
+				</tr>
+				<tr>
+					<td>Flat River Veterinary Hospital</td>
+					<td>Dr. Lloyd Heron, Dr. John Seal</td>
+					<td>http://www.flatriverveterinaryhospital.com/</td>
+					<td>325 Red Mountain Rd., Rougemont</td>
+					<td>Durham/Person</td>
+					<td>Equine services</td>
+				</tr>
+				<tr>
+					<td>Mid State Equine Hospital</td>
+					<td>Phone : 336-622-6447</td>
+					<td>http://midstateequine.com/</td>
+					<td>2504 Staley Store Rd, Liberty</td>
+					<td>Alamance</td>
+					<td>Equine services</td>
+				</tr>
+				<tr>
+					<td>Iron Will Mobile Veterinary Services</td>
+					<td>Dr. John Parks, Dr. Chelsey Miller</td>
+					<td>http://www.ironwillvets.com/index.html</td>
+					<td>2445 Vaughn Rd., Burlington</td>
+					<td>Alamance</td>
+					<td>Equine and large animal services</td>
+				</tr>
+				<tr>
+					<td>Tillotson Equine</td>
+					<td>Dr. K. Tilllotson</td>
+					<td>http://www.tillotsonequine.com/</td>
+					<td>2842 Leasburg Rd., Roxboro</td>
+					<td>Person</td>
+					<td>Equine services</td>
+				</tr>
+				<tr>
+					<td>Triangle Equine Mobile Veterinary Services</td>
+					<td>Dr. Sally Vivrette</td>
+					<td>http://www.triangleequine.com/</td>
+					<td>103 Candy Apple Court, Cary</td>
+					<td>Wake</td>
+					<td>Equine services, reproductive speciality</td>
+				</tr>
 
+			</table>
+		</div>	
+
+		<h3>Farriers</h3>
+		<div class="container">
+			<table class="table table-bordered">
+				<tr>
+					<th>Farrier/Business Names</th>
+					<th>Business Name</th>
+					<th>Phone Number</th>
+					<th>Website</th>
+					<th>County(ies)</th>
+					<th>Services Offered</th>
+				</tr>
+				<tr>
+					<td>Craig Horvath</td>
+					<td>Craig's Farrier Service</td>
+					<td>919-995-5651</td>
+					<td>http://www.craigsfarrierservice.com/</td>
+					<td>Wake</td>
+					<td>Cold and hot shoeing, balancing, trims</td>
+				</tr>
+				<tr>
+					<td>Matt Flood</td>
+					<td>null</td>
+					<td>(336) 437-4559</td>
+					<td>null</td>
+					<td>Alamance</td>
+					<td>shoeing, trims</td>
+				</tr>
+				<tr>
+					<td>Geoff Morrison</td>
+					<td>Shod Steed, LLC</td>
+					<td>919-264-4735</td>
+					<td>http://www.shodsteed.com/</td>
+					<td>Alamance, Orange</td>
+					<td>Cold and hot shoeing, trims</td>
+				</tr>
+				<tr>
+					<td>Scott Strong</td>
+					<td>Null</td>
+					<td>336-608-9989</td>
+					<td>https://www.facebook.com/scott.strong.3591</td>
+					<td>Guilford, Alamance, Forsyth</td>
+					<td>Cold and hot shoeing, balance and trims</td>
+				</tr>
+			</table>
+		</div>
 	</main>
 
 	<div class="footer">
