--- a/vets-farriers.html
+++ b/vets-farriers.html
@@ -4,7 +4,12 @@
 	<title>Equus-services</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+		<!-- Bootstrap link -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<!-- Google font links -->
+		<!-- Poller One font -->
+		<link href="https://fonts.googleapis.com/css?family=Poller+One" rel="stylesheet">
+		<!-- LibreFranklin font -->
 		<link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +23,7 @@
 				<a href="stables-lessons.html">Lessons and Stables</a>
 				<a href="tack-apparel.html">Tack and Apparel</a>
 				<a href="vets-farriers.html">Veterinarians and Farriers</a>
-				<a href="feed-supplies-trailers">Supplies, Feed, and Trailers</a>
+				<a href="feed-supplies-trailers.html">Supplies, Feed, and Trailers</a>
 			</nav>
 		</div>
 	</header>
