added code for footer

--- a/vets-farriers.html
+++ b/vets-farriers.html
@@ -2,10 +2,11 @@
 <html lang="en-US">
 <head>
 	<title>Equus-services</title>
-		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<!-- Bootstrap link -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<!--style sheet override bootstrap -->
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<!-- Google font links -->
 		<!-- Poller One font -->
 		<link href="https://fonts.googleapis.com/css?family=Poller+One" rel="stylesheet">
@@ -32,13 +33,30 @@
 		<div class="jumbotron">
 			<h2>Veterinary Practices and Farriers</h2>
 		</div>
-		<p>
-				These are very important equine health providers, and sometimes they work together to solve health issues, especially the horse's feet. 
-			<br>
+		<br
+
+		<div class="row">
+			<div class="col-med-2"></div>
+			<div class="col-med-8">
+			Veterinarians and farriers are very important equine health providers, and sometimes they work together to solve health issues, especially the horse's feet.</div>
+			<div class="col-med-2"></div>
+		</div>
+		<br>
+
+		<div class="row">
+			<div class="col-med-2"></div>
+				<div class="col-med-8">
 			 	 Veterinarians usually come to your farm to examine their patients for any number of conditions.  Their services include vaccinations for diseases, treatment for hoof and leg conditions, ‘floating’ teeth, prescribing antibiotics and medications for maladies like abscesses and joint pain relief, and pregnancy tests.  You will want their phone on your ‘speed-dial.’
-			  <br> 
-				Farriers take care of the horses’ feet. At about 4-7 week intervals they trim and balance hooves, remove and replace shoes, and check for conditions that can affect the hooves. You will want their number on speed-dial, too.  The old saying is true, "No hoof, no horse."
-		</p>
+			 	 </div>
+			 <div class="col-med-2"></div>
+		</div>
+		<div class="row">
+			<div class="col-med-2"></div>
+				<div class="col-med-8">
+				Farriers take care of the horses’ feet. At about 4-7 week intervals they trim and balance hooves, remove and replace shoes, and check for conditions that can affect the hooves. You will want their number on speed-dial, too.  The old saying is true, "No hoof, no horse."</div>
+			<div class="col-med-2"></div>
+		</div>
+
 		<h3>Equine Veterinary Practices </h3>
 		<div class="container">
 			<table class="table table-bordered">
@@ -141,8 +159,11 @@
 		</div>
 	</main>
 
-	<div class="footer">
-	</div>
+	<footer>
+		<div class="container">
+			&copy; Copyright 2017 Jay M. Frimmel
+		</div>
+	</footer>
 
 </body>
 </html>
