--- a/stables-lessons.html
+++ b/stables-lessons.html
@@ -2,10 +2,11 @@
 <html lang="en-US">
 <head>
 	<title>Equus-services</title>
-		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<!--style sheet override bootstrap -->
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<!-- Google font links -->
 		<!-- Poller One font -->
 		<link href="https://fonts.googleapis.com/css?family=Poller+One" rel="stylesheet">
@@ -32,6 +33,7 @@
 		<div class="jumbotron">
 			<h2>Riding Stables and Lesson Programs</h2>
 		</div>
+		<br>
 		<p>
 			Here is information about and links to area riding stables and lesson programs. The stables are listed by county. Many of the riding stables offer boarding for your horse(s), and most of these also have their own riding instructors who offer lessons. Some stables allow bringing your own trainer for lessons. 
 		</p>
@@ -85,9 +87,11 @@
 
 	</main>	
 
-	<div class="footer">
-	</div>
-
+	<footer>
+		<div class="container">
+			&copy; Copyright 2017 Jay M. Frimmel
+		</div>
+	</footer>
 
 </body>
 </html>
