--- a/tack-apparel.html
+++ b/tack-apparel.html
@@ -2,10 +2,11 @@
 <html lang="en-US">
 <head>
 	<title>Equus-services</title>
-		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<!-- Bootstrap link -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<!--style sheet override bootstrap -->
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<!-- Google font links -->
 		<!-- Poller One font -->
 		<link href="https://fonts.googleapis.com/css?family=Poller+One" rel="stylesheet">
@@ -85,9 +86,11 @@
 
 	</main>
 
-	<div class="footer">
-	</div>
-
+	<footer>
+		<div class="container">
+			&copy; Copyright 2017 Jay M. Frimmel
+		</div>
+	</footer>
 
 </body>
 </html>
