making changes in code

--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,15 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+
+	<main class="container">
+		<div class="jumbotron">
+			<h2>Contact Us!</h2>
+		</div>
 	<!--navigation bar with links to all pages -->
 	<header id="masthead">
 		<div class="container">
+			<a href="index.html" id="logo">Much ADO! Home</a>
 			<nav>
 				<a href="index.html">Welcome!</a>
 				<a href="stables-lessons.html">Lessons and Stables</a>
@@ -30,13 +36,15 @@
 		</div>
 	</header>
 
-	<main class="container">
-		<div class="jumbotron">
-			<h2>Contact Us!</h2>
-		</div>
 		<div id="main-container" class="container">
 		<section class="main-section">
-			<h1>Contact</h1>
+			<h2>Contact</h2>
+
+		<div class="row">
+			<div class="col-med-2"></div>
+				<div class="col-med-8">Let us know how we're doing, or if any changes need to be added.</div>
+			<div class="col-med-2"></div>
+		</div>
 
 			<form id="contact-form">
 				<ul>
