--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<!--navigation bar with links to all pages -->
+	
+	<main class="container">
+		<section class="title">
+			<div class="jumbotron">
+				<h1>Much ADO About Horses!</h1>
+				<h3>(Alamance, Durham, Orange counties)</h3>
+			</div>
+			<!--navigation bar with links to all pages -->
 	<header id="masthead">
 		<div class="container">
+			<a href="index.html" id="logo">Much ADO! Home</a>
 			<nav>
 				<a href="index.html">Welcome!</a>
 				<a href="stables-lessons.html">Lessons and Stables</a>
@@ -30,13 +38,6 @@
 			</nav>
 		</div>
 	</header>
-
-	<main class="container">
-		<section class="title">
-			<div class="jumbotron">
-				<h1>Much ADO About Horses!</h1>
-				<h3>(Alamance, Durham, Orange counties)</h3>
-			</div>
 			<h2>Resources for</h2>
 			<h2>Horse Owners | Lovers | Dreamers</h2>	
 
