--- a/stables-lessons.html
+++ b/stables-lessons.html
@@ -16,24 +16,27 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<!--navigation bar with links to all pages -->
-	<header id="masthead">
-		<div class="container">
-			<nav>
-				<a href="index.html">Welcome!</a>
-				<a href="stables-lessons.html">Lessons and Stables</a>
-				<a href="tack-apparel.html">Tack and Apparel</a>
-				<a href="vets-farriers.html">Veterinarians and Farriers</a>
-				<a href="feed-supplies-trailers.html">Supplies, Feed, and Trailers</a>
-			</nav>
-		</div>
-	</header>
-
+	
 	<main class="container">
 		<div class="jumbotron">
 			<h2>Riding Stables and Lesson Programs</h2>
 		</div>
-		<br>
+	<!--navigation bar with links to all pages -->
+	<header id="masthead">
+		<div class="container">
+			<a href="index.html" id="logo">Much ADO! Home</a>
+		 
+			<nav>
+				<a href="index.html">Welcome! |</a>
+				<a href="stables-lessons.html">Lessons and Stables |</a>
+				<a href="tack-apparel.html">Tack and Apparel |</a>
+				<a href="vets-farriers.html">Veterinarians and Farriers |</a>
+				<a href="feed-supplies-trailers.html">Supplies, Feed, and Trailers |</a>
+			</nav>
+		</div>
+	</header>
+
+		
 		<p>
 			Here is information about and links to area riding stables and lesson programs. The stables are listed by county. Many of the riding stables offer boarding for your horse(s), and most of these also have their own riding instructors who offer lessons. Some stables allow bringing your own trainer for lessons. 
 		</p>
