--- a/tack-apparel.html
+++ b/tack-apparel.html
@@ -16,9 +16,14 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<!--navigation bar with links to all pages -->
+	<main class="container">
+		<div class="jumbotron">
+		<h2>Tack and Apparel Shops</h2>
+		</div>
+		<!--navigation bar with links to all pages -->
 	<header id="masthead">
 		<div class="container">
+		<a href="index.html" id="logo">Much ADO! Home</a>
 			<nav>
 				<a href="index.html">Welcome!</a>
 				<a href="stables-lessons.html">Lessons and Stables</a>
@@ -28,14 +33,17 @@
 			</nav>
 		</div>
 	</header>
+		
+		<div class="row">
+			<div class="col-med-2"></div>
+			<div class="col-med-8">
+				Tack is what your horse wears when they are working, and apparel is what you wear.  Tack and apparel are usually found together in “tack shops.” Tack shops can be specialized for the style of riding; for example, Western or English.  Some have merchandise for several riding styles.  What can you find in them? Boots, breeches, jeans, shirts, jackets, helmets, gloves, saddles, bridles, saddle pads, girths and cinches, halters, leads, and much, much more!</div>
+			<div class="col-med-2"></div>
+		</div)
 
-	<main class="container">
-		<div class="jumbotron">
-		<h2>Tack and Apparel Shops</h2>
-		</div>
-		<br>
-			<p>
-				Tack is what your horse wears when they are working, and apparel is what you wear.  Tack and apparel are usually found together in “tack shops.” Tack shops can be specialized for the style of riding; for example, Western or English.  Some have merchandise for several riding styles.  What can you find in them? Boots, breeches, jeans, shirts, jackets, helmets, gloves, saddles, bridles, saddle pads, girths and cinches, halters, leads, and much, much more! 
+		<div class="row">
+			<div class="col-med-2"></div>
+				<div class="col-med-8">
 			</p>
 		<div class="container">
 			<table class="table table-bordered">
