--- a/feed-supplies-trailers.html
+++ b/feed-supplies-trailers.html
@@ -2,10 +2,11 @@
 <html lang="en-US">
 <head>
 	<title>Equus-services</title>
-		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<!-- Bootstrap link -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<!-- style sheet override bootstrap -->
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<!-- Google font links -->
 		<!-- Poller One font -->
 		<link href="https://fonts.googleapis.com/css?family=Poller+One" rel="stylesheet">
@@ -15,9 +16,14 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+	<main class="container">
+		<div class="jumbotron">
+			<h2>Feed, Barn Supplies and Trailers</h2>
+		</div>
 	<!--navigation bar with links to all pages -->
 	<header id="masthead">
 		<div class="container">
+		<a href="index.html" id="logo">Much ADO! Home</a>
 			<nav>
 				<a href="index.html">Welcome!</a>
 				<a href="stables-lessons.html">Lessons and Stables</a>
@@ -28,11 +34,15 @@
 		</div>
 	</header>
 
-	<main class="container">
-		<div class="jumbotron">
-			<h2>Feed, Barn Supplies and Trailers</h2>
+	<div class="row">
+			<div class="col-med-2"></div>
+				<div class="col-med-8">This page helps horse owners who wish to buy their own feed and hay, buckets, shavings, saddle racks, trailers, and more.</div>
+			<div class="col-med-2"></div>
 		</div>
-			<p>This page helps horse owners who wish to buy their own feed and hay, buckets, shavings, saddle racks, trailers, and more.  </p>
+		
+		<div class="row">
+			<div class="col-med-2"></div>
+				<div class="col-med-8">
 		<h3>Feed and Supply Stores</h3>
 			<br>
 		<div class="container">
@@ -133,9 +143,11 @@
 		</div>
 	</main>
 
-	<div class="footer">
-	</div>
-
+	<footer>
+		<div class="container">
+			&copy; Copyright 2017 Jay M. Frimmel
+		</div>
+	</footer>
 
 </body>
 </html>
