--- a/vets-farriers.html
+++ b/vets-farriers.html
@@ -16,9 +16,15 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<!--navigation bar with links to all pages -->
+
+	<main class="container">
+		<div class="jumbotron">
+			<h2>Veterinary Practices and Farriers</h2>
+		</div>
+		<!--navigation bar with links to all pages -->
 	<header id="masthead">
 		<div class="container">
+			<a href="index.html" id="logo">Much ADO! Home</a>
 			<nav>
 				<a href="index.html">Welcome!</a>
 				<a href="stables-lessons.html">Lessons and Stables</a>
@@ -28,12 +34,6 @@
 			</nav>
 		</div>
 	</header>
-
-	<main class="container">
-		<div class="jumbotron">
-			<h2>Veterinary Practices and Farriers</h2>
-		</div>
-		<br
 
 		<div class="row">
 			<div class="col-med-2"></div>
