adjusted code and content

--- a/feed-supplies-trailers.html
+++ b/feed-supplies-trailers.html
@@ -16,6 +16,7 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+	
 	<main class="container">
 		<div class="jumbotron">
 			<h2>Feed, Barn Supplies and Trailers</h2>
@@ -24,19 +25,21 @@
 	<header id="masthead">
 		<div class="container">
 		<a href="index.html" id="logo">Much ADO! Home</a>
+			
 			<nav>
-				<a href="index.html">Welcome!</a>
-				<a href="stables-lessons.html">Lessons and Stables</a>
-				<a href="tack-apparel.html">Tack and Apparel</a>
-				<a href="vets-farriers.html">Veterinarians and Farriers</a>
-				<a href="feed-supplies-trailers.html">Supplies, Feed, and Trailers</a>
+				<a href="index.html">| Welcome!</a>
+				<a href="stables-lessons.html">Lessons and Stables |</a>
+				<a href="tack-apparel.html">Tack and Apparel |</a>
+				<a href="vets-farriers.html">Veterinarians and Farriers |</a>
+				<a href="feed-supplies-trailers.html">Barn Supplies, Feed, and Trailers |</a>
+				<a href="contact.html">Contact Us |</a>
 			</nav>
 		</div>
 	</header>
 
 	<div class="row">
 			<div class="col-med-2"></div>
-				<div class="col-med-8">This page helps horse owners who wish to buy their own feed and hay, buckets, shavings, saddle racks, trailers, and more.</div>
+				<div class="col-med-8">Looking for the stuff needed to take care of a horse? Here is a list of merchants who stock feeds and hay(s), buckets, shavings, saddle racks, trailers, and more.</div>
 			<div class="col-med-2"></div>
 		</div>
 		
