--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
 		<div class="container">
 			<a href="index.html" id="logo">Much ADO! Home</a>
 			<nav>
-				<a href="index.html">Welcome!</a>
+				<a href="index.html">| Welcome!</a>
 				<a href="stables-lessons.html">Lessons and Stables</a>
 				<a href="tack-apparel.html">Tack and Apparel</a>
 				<a href="vets-farriers.html">Veterinarians and Farriers</a>
-				<a href="feed-supplies-trailers.html">Supplies, Feed, and Trailers</a>
+				<a href="feed-supplies-trailers.html">Barn Supplies, Feed, and Trailers</a>
+				<a href="contact.html">Contact Us |</a>
 			</nav>
 		</div>
 	</header>
