--- a/stables-lessons.html
+++ b/stables-lessons.html
@@ -27,19 +27,22 @@
 			<a href="index.html" id="logo">Much ADO! Home</a>
 		 
 			<nav>
-				<a href="index.html">Welcome! |</a>
+				<a href="index.html">| Welcome! |</a>
 				<a href="stables-lessons.html">Lessons and Stables |</a>
 				<a href="tack-apparel.html">Tack and Apparel |</a>
 				<a href="vets-farriers.html">Veterinarians and Farriers |</a>
-				<a href="feed-supplies-trailers.html">Supplies, Feed, and Trailers |</a>
+				<a href="feed-supplies-trailers.html">Barn Supplies, Feed, and Trailers |</a>
+				<a href="contact.html">Contact Us |</a>
 			</nav>
 		</div>
 	</header>
 
-		
-		<p>
-			Here is information about and links to area riding stables and lesson programs. The stables are listed by county. Many of the riding stables offer boarding for your horse(s), and most of these also have their own riding instructors who offer lessons. Some stables allow bringing your own trainer for lessons. 
-		</p>
+		<div class="row">
+			<div class="col-med-2"></div>
+				<div class="col-med-8">
+			Here is information about and links to area riding stables and lesson programs. The stables are listed by county. Many of the riding stables offer boarding for your horse(s), and most of these also have their own riding instructors who offer lessons. Some stables allow bringing your own trainer for lessons.</div>
+			<div class="col-med-2"></div>
+		</div>
 
 		<div class="container">
 			<table class="table table-bordered">
