--- a/tack-apparel.html
+++ b/tack-apparel.html
@@ -16,6 +16,7 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+
 	<main class="container">
 		<div class="jumbotron">
 		<h2>Tack and Apparel Shops</h2>
@@ -25,26 +26,22 @@
 		<div class="container">
 		<a href="index.html" id="logo">Much ADO! Home</a>
 			<nav>
-				<a href="index.html">Welcome!</a>
+				<a href="index.html">| Welcome!</a>
 				<a href="stables-lessons.html">Lessons and Stables</a>
 				<a href="tack-apparel.html">Tack and Apparel</a>
 				<a href="vets-farriers.html">Veterinarians and Farriers</a>
-				<a href="feed-supplies-trailers.html">Supplies, Feed, and Trailers</a>
+				<a href="feed-supplies-trailers.html">Barn Supplies, Feed, and Trailers</a>
+				<a href="contact.html">Contact Us |</a>
 			</nav>
 		</div>
 	</header>
 		
 		<div class="row">
 			<div class="col-med-2"></div>
-			<div class="col-med-8">
-				Tack is what your horse wears when they are working, and apparel is what you wear.  Tack and apparel are usually found together in “tack shops.” Tack shops can be specialized for the style of riding; for example, Western or English.  Some have merchandise for several riding styles.  What can you find in them? Boots, breeches, jeans, shirts, jackets, helmets, gloves, saddles, bridles, saddle pads, girths and cinches, halters, leads, and much, much more!</div>
+			<div class="col-med-8">Tack is what your horse wears when they are working, and apparel is what you wear.  Tack and apparel are usually found together in “tack shops.” Tack shops can be specialized for the style of riding; for example, Western or English.  Some have merchandise for several riding styles.  What can you find in them? Boots, breeches, jeans, shirts, jackets, helmets, gloves, saddles, bridles, saddle pads, girths and cinches, halters, leads, and much, much more!</div>
 			<div class="col-med-2"></div>
 		</div)
 
-		<div class="row">
-			<div class="col-med-2"></div>
-				<div class="col-med-8">
-			</p>
 		<div class="container">
 			<table class="table table-bordered">
 				<tr>
