added code, updated database

--- a/feed-supplies-trailers.html
+++ b/feed-supplies-trailers.html
@@ -38,15 +38,12 @@
 	</header>
 
 	<div class="row">
+	<h3>Feed and Supply Stores</h3>
 			<div class="col-med-2"></div>
-				<div class="col-med-8">Looking for the stuff needed to take care of a horse? Here is a list of merchants who stock feeds and hay(s), buckets, shavings, saddle racks, trailers, and more.</div>
+				<div class="col-med-8">Looking for the stuff needed to take care of a horse? There is a lot of gear needed to take proper care of horses and equines. Here is a list of merchants who stock feeds and hay(s), buckets, shavings, grooming equipment, saddle racks, and more.</div>
 			<div class="col-med-2"></div>
 		</div>
 		
-		<div class="row">
-			<div class="col-med-2"></div>
-				<div class="col-med-8">
-		<h3>Feed and Supply Stores</h3>
 			<br>
 		<div class="container">
 			<table class="table table-bordered">
@@ -96,6 +93,10 @@
 		</div>
 
 		<h3>Trailers and Equipment</h3>
+		<div class="col-med-2"></div>
+				<div class="col-med-8">Taking your horse off the farm requires trailers. Below is a list of trailer shops, and most offer repairs and service. Sometimes good, used trailers can be found on sites like CraigsList.</div>
+			<div class="col-med-2"></div>
+		</div>
 
 		<div class="container">
 			<table class="table table-bordered">
