--- a/stables-lessons.html
+++ b/stables-lessons.html
@@ -37,6 +37,7 @@
 		</div>
 	</header>
 
+		<h3>Riding Stables and Lesson Programs</h3>
 		<div class="row">
 			<div class="col-med-2"></div>
 				<div class="col-med-8">
