--- a/tack-apparel.html
+++ b/tack-apparel.html
@@ -36,6 +36,7 @@
 		</div>
 	</header>
 		
+		<h3>Tack and Apparel Shops</h3>
 		<div class="row">
 			<div class="col-med-2"></div>
 			<div class="col-med-8">Tack is what your horse wears when they are working, and apparel is what you wear.  Tack and apparel are usually found together in “tack shops.” Tack shops can be specialized for the style of riding; for example, Western or English.  Some have merchandise for several riding styles.  What can you find in them? Boots, breeches, jeans, shirts, jackets, helmets, gloves, saddles, bridles, saddle pads, girths and cinches, halters, leads, and much, much more!</div>
