--- a/vets-farriers.html
+++ b/vets-farriers.html
@@ -36,6 +36,7 @@
 		</div>
 	</header>
 
+		<h3>Veterinary Practices and Farriers</h3>
 		<div class="row">
 			<div class="col-med-2"></div>
 			<div class="col-med-8">
