--- a/contact.html
+++ b/contact.html
@@ -27,11 +27,11 @@
 		<div class="container">
 			<a href="index.html" id="logo">Much ADO! Home</a>
 			<nav>
-				<a href="index.html">| Welcome!</a>
-				<a href="stables-lessons.html">Lessons and Stables</a>
-				<a href="tack-apparel.html">Tack and Apparel</a>
-				<a href="vets-farriers.html">Veterinarians and Farriers</a>
-				<a href="feed-supplies-trailers.html">Barn Supplies, Feed, and Trailers</a>
+				<a href="index.html">| Welcome! |</a>
+				<a href="stables-lessons.html">Lessons and Stables |</a>
+				<a href="tack-apparel.html">Tack and Apparel |</a>
+				<a href="vets-farriers.html">Veterinarians and Farriers |</a>
+				<a href="feed-supplies-trailers.html">Barn Supplies, Feed, and Trailers |</a>
 				<a href="contact.html">Contact Us |</a>
 			</nav>
 		</div>
@@ -71,8 +71,12 @@
 	</main>
 	<footer>
 		<div class="container">
+			<div class="col-med-2"></div>
+				<div class="col-med-8">
 			&copy; Copyright 2017 Jay M. Frimmel
 		</div>
+		<div class="col-med-2"></div>
+	</div>
 	</footer>
 	</body>
 
