--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<div class="container">
 			<a href="index.html" id="logo">Much ADO! Home</a>
 			<nav>
-				<a href="index.html">| Welcome!</a>
+				<a href="index.html">| Welcome! |</a>
 				<a href="stables-lessons.html">Lessons and Stables</a>
 				<a href="tack-apparel.html">Tack and Apparel</a>
 				<a href="vets-farriers.html">Veterinarians and Farriers</a>
@@ -56,8 +56,12 @@
 
 	<footer>
 		<div class="container">
+			<div class="col-med-2"></div>
+				<div class="col-med-8">
 			&copy; Copyright 2017 Jay M. Frimmel
 		</div>
+		<div class="col-med-2"></div>
+	</div>
 	</footer>
 
 
