--- a/stables-lessons.html
+++ b/stables-lessons.html
@@ -96,8 +96,12 @@
 
 	<footer>
 		<div class="container">
+			<div class="col-med-2"></div>
+				<div class="col-med-8">
 			&copy; Copyright 2017 Jay M. Frimmel
 		</div>
+		<div class="col-med-2"></div>
+	</div>
 	</footer>
 
 </body>
