--- a/vets-farriers.html
+++ b/vets-farriers.html
@@ -50,15 +50,10 @@
 				<div class="col-med-8">
 			 	 Veterinarians usually come to your farm to examine their patients for any number of conditions.  Their services include vaccinations for diseases, treatment for hoof and leg conditions, ‘floating’ teeth, prescribing antibiotics and medications for maladies like abscesses and joint pain relief, and pregnancy tests.  You will want their phone on your ‘speed-dial.’
 			 	 </div>
-			 <div class="col-med-2"></div>
-		</div>
-		<div class="row">
-			<div class="col-med-2"></div>
-				<div class="col-med-8">
-				Farriers take care of the horses’ feet. At about 4-7 week intervals they trim and balance hooves, remove and replace shoes, and check for conditions that can affect the hooves. You will want their number on speed-dial, too.  The old saying is true, "No hoof, no horse."</div>
-			<div class="col-med-2"></div>
-		</div>
-
+			<div class="images">
+			 	<img src="assets/images/Surgery1.jpg" alt="Vet-Injection" style="width: 300px; height: 225px">     
+				<img src="assets/images/20130828_133559_2_bestshot_resized_2.jpg" alt="Vet-Floating-Teeth" style="width: 300px; height: 225px">
+			</div>
 		<h3>Equine Veterinary Practices </h3>
 		<div class="container">
 			<table class="table table-bordered">
