--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
 
 		</section>
 
-
+<img src="url" alt="some_text" style="width:width;height:height;">
 	</main>
 	<footer>
 		<div class="container">
