--- a/feed-supplies-trailers.html
+++ b/feed-supplies-trailers.html
@@ -43,7 +43,7 @@
 				<div class="col-med-8">Looking for the stuff needed to take care of a horse? There is a lot of gear needed to take proper care of horses and equines. Here is a list of merchants who stock feeds and hay(s), buckets, shavings, grooming equipment, saddle racks, and more.</div>
 			<div class="col-med-2"></div>
 		</div>
-		
+		<img src="url" alt="some_text" style="width:width;height:height;">
 			<br>
 		<div class="container">
 			<table class="table table-bordered">
