--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 			<p>Thanks for stopping by!</p>
 			<br>
 			<p>(Enter at 'A' to start your dressage test!)</p>
-
+<img src="url" alt="some_text" style="width:width;height:height;">
 		</div>
 	</main>
-
+<img src="url" alt="some_text" style="width:width;height:height;">
 	<footer>
 		<div class="container">
 			<div class="col-med-2"></div>
