--- a/tack-apparel.html
+++ b/tack-apparel.html
@@ -43,6 +43,7 @@
 			<div class="col-med-2"></div>
 		</div)
 
+		<img src="url" alt="some_text" style="width:width;height:height;">
 		<div class="container">
 			<table class="table table-bordered">
 				<tr>
