--- a/feed-supplies-trailers.html
+++ b/feed-supplies-trailers.html
@@ -40,10 +40,16 @@
 	<div class="row">
 	<h3>Feed and Supply Stores</h3>
 			<div class="col-med-2"></div>
-				<div class="col-med-8">Looking for the stuff needed to take care of a horse? There is a lot of gear needed to take proper care of horses and equines. Here is a list of merchants who stock feeds and hay(s), buckets, shavings, grooming equipment, saddle racks, and more.</div>
+				<div class="col-med-8">Looking for the stuff needed to take care of a horse? There is a lot of gear needed to take proper care of horses and equines. You'll need grooming tools, buckets, feed, hay, saddle racks, storage bins, and so on. Here is a list of merchants who stock feeds and hay(s), buckets, shavings, grooming equipment, saddle racks, and more.</div>
 			<div class="col-med-2"></div>
 		</div>
-		<img src="url" alt="some_text" style="width:width;height:height;">
+
+		<div  class="images">
+		<img src="assets/images/hay-bale-eaten-middle-horse-1500.jpg" alt="horse-eating-hay" style="width: 280px; height: 230px">
+		<img src="assets/images/49025716-horse-feed.jpg" alt="horse-feed" style="width:250px; height:230px;">
+		<img src="assets/images/s-l1000.jpg" alt="wall-saddle-rack" style="width: 300px; height: 230px">
+		<img src="assets/images/Grooming Kit -blue.jpg" alt="grooming-kit" style="width: 300px; height: 230px">
+		</div>
 			<br>
 		<div class="container">
 			<table class="table table-bordered">
