--- a/tack-apparel.html
+++ b/tack-apparel.html
@@ -43,7 +43,15 @@
 			<div class="col-med-2"></div>
 		</div)
 
-		<img src="url" alt="some_text" style="width:width;height:height;">
+		<div class="images">
+			<img src="assets/images/westernridingclothes1.jpg" alt="Western-outfit" style="width:100px; height: 190px;">
+			<img src="assets/images/220px-WestShowSdl.jpg" alt="western-saddle" alt="western-saddle" style="width: 180px; height: 190px" >
+			<img src="assets/images/browband_headstall.png" alt="western-headstall" style="width: 170px; height: 190px">
+			<img src="assets/images/250px-Hunt_bridle_head.jpg" alt="hunt-bridle" style="width: 250px; height: 190px">
+			<img src="assets/images/Hunt_saddle_200px.jpg" alt="hunt-saddle" style="width: 240px; height: 190px">
+			<img src="assets/images/0004074.jpg" alt="English-outfit" style="width: 190px; height: 190px;">
+		</div>
+
 		<div class="container">
 			<table class="table table-bordered">
 				<tr>
